--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@ function demoSlider() {
     }
 
     var o = {
-        rootDir: 'https://github.com/rolandtoth/PromoSlider/images/',
+        rootDir: 'https://raw.githubusercontent.com/rolandtoth/promoSlider/master/images',
         slides: [
             ['01.jpg', '#next', '', 'Slide 1: click for next slide'],
             ['02.jpg', '#last', '', 'Slide 2: click for last slide'],
