--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@ function demoSlider() {
     }
 
     var o = {
-        rootDir: 'https://raw.githubusercontent.com/rolandtoth/promoSlider/master/images',
+        rootDir: 'https://raw.githubusercontent.com/rolandtoth/PromoSlider/master/images',
         slides: [
             ['01.jpg', '#next', '', 'Slide 1: click for next slide'],
             ['02.jpg', '#last', '', 'Slide 2: click for last slide'],
@@ -226,7 +226,7 @@ function demoSlider() {
 
 embedSlider = function () {
     demoSlider(
-            ['appendTo', 'sliderPlaceholder'],
+            ['appendTo', '#sliderPlaceholder'],
             ['pagerPosition', 'bottom'],
             ['actionButtonsPosition', 'top'],
             ['actionButtons', [
