--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
         <li><a id="linear" href="#" title="Set animation timing function to linear">Linear animation</a></li>
         <li><a id="waitAnimation" href="#" title="Go to next slide only if previous animation is completed">Wait animation</a></li>
         <li><a id="topCaption" href="#" title="Override default caption position bottom">Top caption</a></li>
-        <li><a id="firstSlide" href="#" title="Shift slides so that slide number two is the first">First slide 2</a></li>
+        <li><a id="firstSlide" href="#" title="Shift slides to make slide number 2 the first slide">First slide 2</a></li>
         <li><a id="activeSlide" href="#" title="Start slider scrolled to slide number 4">Start at slide 4</a></li>
         <li><a id="callback" href="#" title="Execute custom functions on start, click and close">Callbacks</a></li>
     </ul>
@@ -305,7 +305,7 @@ document.getElementById('modal').onclick = function () {
 
 // auto play
 document.getElementById('autoPlay').onclick = function () {
-    demoSlider(['autoPlay', 1]);
+    demoSlider(['autoPlay', 3]);
     return false;
 };
 
