--- a/index.html
+++ b/index.html
@@ -124,6 +124,36 @@
             font-family: sans-serif;
         }
 
+        .slideNumber {
+            position: absolute;
+            left: 24px;
+            opacity: 0.6;
+            text-transform: uppercase;
+        }
+
+        .promoCaption a {
+            font-weight: bold;
+            text-decoration: underline;
+        }
+
+        .promoCaption a.next {
+            opacity: 0.6;
+            text-transform: uppercase;
+            font-weight: normal;
+            text-decoration: none;
+            font-size: 24px;
+            line-height: 1;
+            position: absolute;
+            right: 0;
+            display: inline-block;
+            padding: 16px 24px;
+            margin-top: -16px;
+            transition: opacity 0.2s;
+        }
+        .promoCaption a.next:hover {
+            opacity: 1;
+        }
+
         .group:before, .group:after {
             content: "";
             display: table;
@@ -152,14 +182,17 @@
 <section class="demos">
 
     <ul class="group">
-        <li><a id="embed" class="active" href="#" title="Add embedded slider to page">Embed</a></li>
+        <li><a id="embed" class="active" href="#" title="Add or remove embedded slider">Toggle embed</a></li>
+        <li><a id="horizontal" href="#" title="Set slide animation direction to horizontal">Horizontal</a></li>
         <li><a id="vertical" href="#" title="Set slide animation direction to vertical">Vertical</a></li>
         <li><a id="fade" href="#" title="Set slide effect to fade">Fade</a></li>
         <li><a id="autoPlay" href="#" title="Set slider to play automatically">Auto play</a></li>
+        <li><a id="linear" href="#" title="Set animation timing function to linear">Linear animation</a></li>
+        <li><a id="waitAnimation" href="#" title="Go to next slide only if previous animation is completed">Wait animation</a></li>
+        <li><a id="noAnimation" href="#" title="Disable slide animation">No animation</a></li>
         <li><a id="action" href="#" title="Add custom links below slider">Action buttons</a></li>
         <li><a id="fullscreen" href="#" title="Show slider in fullscreen mode">Fullscreen</a></li>
-        <li><a id="fullscreenStretch" href="#" title="Show fullscreen slider with images stretched to full width and height">Fullscreen stretch</a>
-        </li>
+        <li><a id="fullscreenStretch" href="#" title="Fullscreen slider with images stretched to full width and height">Fullscreen stretch</a></li>
         <li><a id="interstitial" href="#" title="Set slider style to interstitial">Interstitial</a></li>
         <li><a id="customClose" href="#" title="Use custom close button text">Custom close</a></li>
         <li><a id="randomize" href="#" title="Show slides in random order">Randomize</a></li>
@@ -174,10 +207,10 @@
         <li><a id="rewind" href="#" title="Rewind slider after last slide">Rewind on end</a></li>
         <li><a id="hoverControls" href="#" title="Show controls only on hovering the slider">Hover controls</a></li>
         <li><a id="insideControls" href="#" title="Show controls inside slider boundaries">Inside controls</a></li>
-        <li><a id="noAnimation" href="#" title="Disable slide animation">No animation</a></li>
-        <li><a id="linear" href="#" title="Set animation timing function to linear">Linear animation</a></li>
-        <li><a id="waitAnimation" href="#" title="Go to next slide only if previous animation is completed">Wait animation</a></li>
-        <li><a id="topCaption" href="#" title="Override default caption position bottom">Top caption</a></li>
+        <li><a id="hideControls" href="#" title="Hide controls (use ESC key to close)">Hide controls</a></li>
+        <li><a id="topCaptions" href="#" title="Override default caption position bottom">Top captions</a></li>
+        <li><a id="htmlCaptions" href="#" title="Add html to caption">HTML captions</a></li>
+        <li><a id="disableCaptions" href="#" title="Disable captions on all slides">Disable captions</a></li>
         <li><a id="firstSlide" href="#" title="Shift slides to make slide number 2 the first slide">First slide 2</a></li>
         <li><a id="activeSlide" href="#" title="Start slider scrolled to slide number 4">Start at slide 4</a></li>
         <li><a id="callback" href="#" title="Execute custom functions on start, click and close">Callbacks</a></li>
@@ -242,6 +275,12 @@ window.onload = embedSlider;
 
 // embed
 document.getElementById('embed').onclick = embedSlider;
+
+// horizontal
+document.getElementById('horizontal').onclick = function () {
+    demoSlider();
+    return false;
+};
 
 // vertical
 document.getElementById('vertical').onclick = function () {
@@ -348,7 +387,7 @@ document.getElementById('rewind').onclick = function () {
 // action buttons
 document.getElementById('action').onclick = function () {
     demoSlider(['actionButtons', [
-        ['GitHub', 'https://github.com/rolandtoth/PromoSlider', '_blank', 'external github'],
+        ['GitHub', 'https://github.com/rolandtoth/PromoSlider', '_blank', 'github'],
         ['#3', '#slide3', '', ''],
         ['Fullscreen', '#fullscreen', '', ''],
         ['Prev', '#prev', '', ''],
@@ -366,15 +405,15 @@ document.getElementById('hoverControls').onclick = function () {
     return false;
 };
 
-// inside controls
-document.getElementById('insideControls').onclick = function () {
-    demoSlider(['navArrowsPosition', 'inside'], ['pagerPosition', 'inside'], ['closeButtonPosition', 'inside'], ['counter', true], ['counterPosition', 'inside']);
+// hide controls
+document.getElementById('hideControls').onclick = function () {
+    demoSlider(['counter', false], ['navArrows', false], ['pager', false], ['close', false], ['disableNavArrows', true]);
     return false;
 };
 
-// no animation
-document.getElementById('noAnimation').onclick = function () {
-    demoSlider(['slideDuration', 0], ['fadeInDuration', 0], ['fadeOutDuration', 0]);
+// inside controls
+document.getElementById('insideControls').onclick = function () {
+    demoSlider(['navArrowsPosition', 'inside'], ['pagerPosition', 'inside'], ['closeButtonPosition', 'inside'], ['counter', true], ['counterPosition', 'inside']);
     return false;
 };
 
@@ -384,15 +423,39 @@ document.getElementById('linear').onclick = function () {
     return false;
 };
 
+// no animation
+document.getElementById('noAnimation').onclick = function () {
+    demoSlider(['slideDuration', 0], ['fadeInDuration', 0], ['fadeOutDuration', 0]);
+    return false;
+};
+
 // wait animation finish
 document.getElementById('waitAnimation').onclick = function () {
     demoSlider(['waitAnimationFinish', true]);
     return false;
 };
 
-// top caption
-document.getElementById('topCaption').onclick = function () {
+// top captions
+document.getElementById('topCaptions').onclick = function () {
     demoSlider(['captionPosition', 'top']);
+    return false;
+};
+
+// HTML captions
+document.getElementById('htmlCaptions').onclick = function () {
+    demoSlider(['slides', [
+        ['01.jpg', '#next', '', '<span class="slideNumber">Slide 1</span> <a href="#next">click here</a> for next slide <a class="next" href="#next">→</a>'],
+        ['02.jpg', '#last', '', '<span class="slideNumber">Slide 2</span> <a href="#last">click here</a> for last slide <a class="next" href="#next">→</a>'],
+        ['03.jpg', 'https://github.com/rolandtoth/PromoSlider', '_blank', '<span class="slideNumber">Slide 3</span> visit PromoSlider on <a href="https://github.com/rolandtoth/PromoSlider" target="_blank">GitHub</a> <a class="next" href="#next">→</a>'],
+        ['04.jpg', '#first', '', '<span class="slideNumber">Slide 4</span> <a href="#first">click here</a> for first slide <a class="next" href="#next">→</a>'],
+        ['05.jpg', '#fullscreen', '', '<span class="slideNumber">Slide 5</span> <a href="#fullscreen">click here</a> to toggle fullscreen mode <a class="next" href="#next">→</a>']
+    ]]);
+    return false;
+};
+
+// disable captions
+document.getElementById('disableCaptions').onclick = function () {
+    demoSlider(['disableCaptions', true]);
     return false;
 };
 
