toggleEmbed remove wheel event fix fullscreen mode actionButtonsPosition & pagerPosition fix

--- a/index.html
+++ b/index.html
@@ -94,7 +94,8 @@
             margin-top: 24px;
             height: 224px;
             transition: height 0.25s;
-            background: #e9eaeb;
+            background: #e6e7e8;
+            box-shadow: inset 0 0 2px rgba(0,0,0,0.12);
         }
 
         .sliderPlaceholder:empty {
