--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
     <meta charset="utf-8">
     <title>PromoSlider demo</title>
 
-    <link rel="shortcut icon" type="image/ico" href="PromoSlider.ico">
+    <link rel="shortcut icon" type="image/ico" href="promoslider.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-    <script src="PromoSlider.js" type="text/javascript"></script>
+    <script src="promoslider.js" type="text/javascript"></script>
+
+    <link rel="stylesheet" href="promoslider.css" type="text/css" media="screen,projection">
 
     <style type="text/css">
 
@@ -39,7 +41,7 @@
         section {
             text-align: center;
             padding: 54px 0 46px;
-            width: 560px;
+            width: 660px;
             margin: 0 auto;
         }
 
@@ -62,9 +64,9 @@
             margin: 0;
             float: left;
             display: inline-block;
-            width: 25%;
+            width: 20%;
             box-sizing: border-box;
-            border: 1px solid transparent;
+            box-shadow: 0 0 0 2px #F4F4F4;
         }
 
         .demos ul a {
@@ -92,10 +94,10 @@
         .sliderPlaceholder {
             width: 100%;
             margin-top: 24px;
-            height: 224px;
+            height: 225px;
             transition: height 0.25s;
             background: #e6e7e8;
-            box-shadow: inset 0 0 2px rgba(0,0,0,0.12);
+            box-shadow: inset 0 0 2px rgba(0, 0, 0, 0.12);
         }
 
         .sliderPlaceholder:empty {
@@ -144,6 +146,7 @@
             margin-top: -16px;
             transition: opacity 0.2s;
         }
+
         .promoCaption a.next:hover {
             opacity: 1;
         }
@@ -185,14 +188,14 @@
         <li><a id="waitAnimation" href="#" title="Go to next slide only if previous animation is completed">Wait animation</a></li>
         <li><a id="noAnimation" href="#" title="Disable slide animation">No animation</a></li>
         <li><a id="action" href="#" title="Add custom links below slider">Action buttons</a></li>
+        <li><a id="modal" href="#" title="Overlay click close is disabled">Modal</a></li>
         <li><a id="fullscreen" href="#" title="Show slider in fullscreen mode">Fullscreen</a></li>
         <li><a id="fullscreenStretch" href="#" title="Fullscreen slider with images stretched to full width and height">Fullscreen stretch</a></li>
         <li><a id="interstitial" href="#" title="Set slider style to interstitial">Interstitial</a></li>
         <li><a id="customClose" href="#" title="Use custom close button text">Custom close</a></li>
+        <li><a id="customSize" href="#" title="Set custom slider size">Custom size</a></li>
         <li><a id="randomize" href="#" title="Show slides in random order">Randomize</a></li>
         <li><a id="randomOne" href="#" title="Pick one random slide from available slides">Random one</a></li>
-        <li><a id="customSize" href="#" title="Set custom slider size">Custom size</a></li>
-        <li><a id="modal" href="#" title="Overlay click close is disabled">Modal</a></li>
         <li><a id="thumb" href="#" title="Show image thumbnails as pager items">Thumb pager</a></li>
         <li><a id="numeric" href="#" title="Show slide numbers in pager instead of bullets">Numeric pager</a></li>
         <li><a id="progress" href="#" title="Show progressbar style pager">Progress pager</a></li>
@@ -341,7 +344,7 @@ document.getElementById('modal').onclick = function () {
 
 // auto play
 document.getElementById('autoPlay').onclick = function () {
-    demoSlider(['autoPlay', 3]);
+    demoSlider(['autoPlay', 2.5]);
     return false;
 };
 
