--- a/index.html
+++ b/index.html
@@ -39,7 +39,6 @@
 
         section {
             text-align: center;
-            /*padding: 54px 0 46px;*/
             min-width: 320px;
             margin: 0 auto;
         }
@@ -92,8 +91,7 @@
         }
 
         .sliderPlaceholder {
-            /*width: 100%;*/
-            /*height: 225px;*/
+            height: 336px;
             transition: height 0.25s;
             background: #e6e7e8;
             box-shadow: inset 0 0 2px rgba(0, 0, 0, 0.12);
@@ -104,7 +102,6 @@
         }
 
         .sliderPlaceholder > div {
-            /*margin: 0 auto !important;*/
             width: 320px;
         }
 
