progress pager updates

--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@ document.getElementById('fullscreenStretch').onclick = function () {
 
 // interstitial
 document.getElementById('interstitial').onclick = function () {
-    demoSlider(['interstitialDuration', 30], ['keyClose', false]);
+    demoSlider(['pager', 'progress'], ['interstitialDuration', 30], ['keyClose', false]);
     return false;
 };
 
